--- a/web/home/home.html
+++ b/web/home/home.html
@@ -265,23 +265,23 @@
                    <div class=" moblower ">
                     <div class="mobflex-6 ">
                         <div class="mobflex-lower-1 ">
-                            <div class="mobh1 ">Let’s Talk <span class="moborange ">Business</span></div>
+                            <div class="mobh1 " style="width: 190px; ">Let’s Talk <span class="moborange ">Business</span></div>
                             <p class="mobp2 ">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris, faucibus id dignissim massa sed augue ut magna aliquet.</p>
                         </div>
-                        <div class="flex-lower-2 ">
-                            <div class="col-1 ">
-                                <label for="fname " class="color2 " style="margin-bottom: 10px; ">Name:</label>
-                                <input type="text " name=" " class="fname1 ">
+                        <div class="mobflex-lower-2 ">
+                            <div class="mobcol-1 ">
+                                <label for="fname " class="moborange1 " style="margin-bottom: 10px; ">Name:</label>
+                                <input type="text " name=" " class="mobfname1 ">
                             </div>
-                            <div class="col-1 ">
-                                <label for="femail " class="color2 " style="margin-bottom: 10px; ">Email:</label>
-                                <input type=" email " name=" " class="femail ">
+                            <div class="mobcol-1 ">
+                                <label for="femail " class="moborange1 " style="margin-bottom: 10px; ">Email:</label>
+                                <input type=" email " name=" " class="mobfemail ">
                             </div>
-                            <div class="col-1 ">
-                                <label for="fmessage " class="color2 " style="margin-bottom: 10px; ">Message:</label>
-                                <input type="text " " name=" " class="fmessage ">
+                            <div class="mobcol-2 ">
+                                <label for="fmessage " class="moborange1 " style="margin-bottom: 10px; ">Message:</label>
+                                <input type="text "  name=" " class="mobfmessage ">
                     </div>
-                    <button type="submit " class=" submit1 ">Send</button>
+                    <button type="submit " class=" mobsubmit1 ">Send</button>
 
                 </div>
             </div>
