--- a/web/home/home.html
+++ b/web/home/home.html
@@ -145,7 +145,7 @@
         </div>
         <div class="corousal">
             <div class="flex-7">
-                <h3 style="color:#000000 ; margin-top: 90px; margin-left: 450px;">We <span class="orange">work</span> with...</h3>
+                <h3 style="color:#000000 ; margin-top: 90px; margin-left: 350px;">We <span class="orange">work</span> with...</h3>
                 <div class="corousal-1">
                     <div class="marquee">
                         <div class="marquee-content" id="marquee-content-id">
@@ -168,7 +168,7 @@
                         </div>
                     </div>
                 </div>
-                <p class="p5" style="color:#000000 ;  margin-left: 350px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Semper vel suspendisse pharetra, ultrices. Tortor risus hac varius ipsum. Feugiat nunc feugiat amet ac sit elit pretium. Duis praesent volutpat quis euismod cras maecenas viverra
+                <p class="p5" style="color:#000000 ;  margin-left: 300px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Semper vel suspendisse pharetra, ultrices. Tortor risus hac varius ipsum. Feugiat nunc feugiat amet ac sit elit pretium. Duis praesent volutpat quis euismod cras maecenas viverra
                     arcu.
                 </p>
             </div>
@@ -281,7 +281,34 @@
                     </div> -->
                      </div>
                    </div>
-                   <div class="mobcorousal "></div>
+                   <div class="mobcorousal ">
+                       <div class="mobflex-7 ">
+                           <h3 class=" mobh3 " style=" width: auto; height:24px; color:#000000; text-align: center;margin-top: 60px; ">We <span class="moborange ">work</span> with...</h3>
+                       </div>
+                       <div class=" mobcoro-img " >
+                        <div class="marquee ">
+                            <div class="marquee-content " id="marquee-content-id ">
+                                <div class="marquee-content-test ">
+                                    <img alt="Image " src="https://images.unsplash.com/photo-1532777946373-b6783242f211?ixlib=rb-0.3.5&amp;amp;q=80&amp;amp;fm=jpg&amp;amp;crop=entropy&amp;amp;cs=tinysrgb&amp;amp;w=1080&amp;amp;fit=max&amp;amp;ixid=eyJhcHBfaWQiOjMyMDc0fQ&amp;amp;s=8ac55cf3a68785643998730839663129 "
+                                        class="img-fluid ">
+                                </div>
+                                <img class="img-fluid " src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e?ixlib=rb-0.3.5&amp;amp;q=80&amp;amp;fm=jpg&amp;amp;crop=entropy&amp;amp;cs=tinysrgb&amp;amp;w=1080&amp;amp;fit=max&amp;amp;ixid=eyJhcHBfaWQiOjMyMDc0fQ&amp;amp;s=ee8417f0ea2a50d53a12665820b54e23 "
+                                    alt="Second slide ">
+                                <img alt="Image " src="https://images.unsplash.com/photo-1532777946373-b6783242f211?ixlib=rb-0.3.5&amp;amp;q=80&amp;amp;fm=jpg&amp;amp;crop=entropy&amp;amp;cs=tinysrgb&amp;amp;w=1080&amp;amp;fit=max&amp;amp;ixid=eyJhcHBfaWQiOjMyMDc0fQ&amp;amp;s=8ac55cf3a68785643998730839663129 "
+                                    class="img-fluid ">
+                                <img alt="Image " src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e?ixlib=rb-0.3.5&amp;amp;q=80&amp;amp;fm=jpg&amp;amp;crop=entropy&amp;amp;cs=tinysrgb&amp;amp;w=1080&amp;amp;fit=max&amp;amp;ixid=eyJhcHBfaWQiOjMyMDc0fQ&amp;amp;s=ee8417f0ea2a50d53a12665820b54e23 "
+                                    class="img-fluid ">
+                                <img alt="Image " src="https://images.unsplash.com/photo-1532763303805-529d595877c5?ixlib=rb-0.3.5&amp;amp;q=80&amp;amp;fm=jpg&amp;amp;crop=entropy&amp;amp;cs=tinysrgb&amp;amp;w=1080&amp;amp;fit=max&amp;amp;ixid=eyJhcHBfaWQiOjMyMDc0fQ&amp;amp;s=5ee4fd5d19b40f93eadb21871757eda6 "
+                                    class="img-fluid ">
+                                <img alt="Image " src="https://images.unsplash.com/photo-1532777946373-b6783242f211?ixlib=rb-0.3.5&amp;amp;q=80&amp;amp;fm=jpg&amp;amp;crop=entropy&amp;amp;cs=tinysrgb&amp;amp;w=1080&amp;amp;fit=max&amp;amp;ixid=eyJhcHBfaWQiOjMyMDc0fQ&amp;amp;s=8ac55cf3a68785643998730839663129 "
+                                    class="img-fluid ">
+                                <img alt="Image " src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e?ixlib=rb-0.3.5&amp;amp;q=80&amp;amp;fm=jpg&amp;amp;crop=entropy&amp;amp;cs=tinysrgb&amp;amp;w=1080&amp;amp;fit=max&amp;amp;ixid=eyJhcHBfaWQiOjMyMDc0fQ&amp;amp;s=ee8417f0ea2a50d53a12665820b54e23 "
+                                    class="img-fluid ">
+                            </div>
+                        </div>
+                       </div>
+                       <div class="mobp3 ">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Semper vel suspendisse pharetra, ultrices. Tortor risus hac varius ipsum. Feugiat nunc feugiat amet ac sit elit pretium. Duis praesent volutpat quis euismod cras maecenas viverra arcu.</div>
+                   </div>
                    <div class=" moblower ">
                     <div class="mobflex-6 ">
                         <div class="mobflex-lower-1 ">
