--- a/web/home/index.html
+++ b/web/home/index.html
@@ -148,7 +148,7 @@
                 <h3 style="color:#000000 ; margin-top: 90px; margin-left: 350px;">We <span class="orange">work</span> with...</h3>
                 <div class="corousal-1">
                     <div class="marquee">
-                        <div class="marquee-content" id="marquee-content-id">
+                        <div class="marquee-content animation-marquee" id="marquee-content-id">
                             <div class="marquee-content-test">
                                 <img alt="Image" src="https://images.unsplash.com/photo-1532777946373-b6783242f211?ixlib=rb-0.3.5&amp;amp;q=80&amp;amp;fm=jpg&amp;amp;crop=entropy&amp;amp;cs=tinysrgb&amp;amp;w=1080&amp;amp;fit=max&amp;amp;ixid=eyJhcHBfaWQiOjMyMDc0fQ&amp;amp;s=8ac55cf3a68785643998730839663129"
                                     class="img-fluid">
@@ -165,6 +165,14 @@
                                 class="img-fluid">
                             <img alt="Image" src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e?ixlib=rb-0.3.5&amp;amp;q=80&amp;amp;fm=jpg&amp;amp;crop=entropy&amp;amp;cs=tinysrgb&amp;amp;w=1080&amp;amp;fit=max&amp;amp;ixid=eyJhcHBfaWQiOjMyMDc0fQ&amp;amp;s=ee8417f0ea2a50d53a12665820b54e23"
                                 class="img-fluid">
+                            <img alt="Image " src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e?ixlib=rb-0.3.5&amp;amp;q=80&amp;amp;fm=jpg&amp;amp;crop=entropy&amp;amp;cs=tinysrgb&amp;amp;w=1080&amp;amp;fit=max&amp;amp;ixid=eyJhcHBfaWQiOjMyMDc0fQ&amp;amp;s=ee8417f0ea2a50d53a12665820b54e23 "
+                                class="img-fluid ">
+                            <img alt="Image " src="https://images.unsplash.com/photo-1532763303805-529d595877c5?ixlib=rb-0.3.5&amp;amp;q=80&amp;amp;fm=jpg&amp;amp;crop=entropy&amp;amp;cs=tinysrgb&amp;amp;w=1080&amp;amp;fit=max&amp;amp;ixid=eyJhcHBfaWQiOjMyMDc0fQ&amp;amp;s=5ee4fd5d19b40f93eadb21871757eda6 "
+                                class="img-fluid ">
+                            <img alt="Image " src="https://images.unsplash.com/photo-1532777946373-b6783242f211?ixlib=rb-0.3.5&amp;amp;q=80&amp;amp;fm=jpg&amp;amp;crop=entropy&amp;amp;cs=tinysrgb&amp;amp;w=1080&amp;amp;fit=max&amp;amp;ixid=eyJhcHBfaWQiOjMyMDc0fQ&amp;amp;s=8ac55cf3a68785643998730839663129 "
+                                class="img-fluid ">
+                            <img alt="Image " src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e?ixlib=rb-0.3.5&amp;amp;q=80&amp;amp;fm=jpg&amp;amp;crop=entropy&amp;amp;cs=tinysrgb&amp;amp;w=1080&amp;amp;fit=max&amp;amp;ixid=eyJhcHBfaWQiOjMyMDc0fQ&amp;amp;s=ee8417f0ea2a50d53a12665820b54e23 "
+                                class="img-fluid ">
                         </div>
                     </div>
                 </div>
@@ -287,7 +295,7 @@
                        </div>
                        <div class=" mobcoro-img " >
                         <div class="marquee ">
-                            <div class="marquee-content " id="marquee-content-id ">
+                            <div class="marquee-content animation-marquee " id="marquee-content-id ">
                                 <div class="marquee-content-test ">
                                     <img alt="Image " src="https://images.unsplash.com/photo-1532777946373-b6783242f211?ixlib=rb-0.3.5&amp;amp;q=80&amp;amp;fm=jpg&amp;amp;crop=entropy&amp;amp;cs=tinysrgb&amp;amp;w=1080&amp;amp;fit=max&amp;amp;ixid=eyJhcHBfaWQiOjMyMDc0fQ&amp;amp;s=8ac55cf3a68785643998730839663129 "
                                         class="img-fluid ">
@@ -297,6 +305,14 @@
                                 <img alt="Image " src="https://images.unsplash.com/photo-1532777946373-b6783242f211?ixlib=rb-0.3.5&amp;amp;q=80&amp;amp;fm=jpg&amp;amp;crop=entropy&amp;amp;cs=tinysrgb&amp;amp;w=1080&amp;amp;fit=max&amp;amp;ixid=eyJhcHBfaWQiOjMyMDc0fQ&amp;amp;s=8ac55cf3a68785643998730839663129 "
                                     class="img-fluid ">
                                 <img alt="Image " src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e?ixlib=rb-0.3.5&amp;amp;q=80&amp;amp;fm=jpg&amp;amp;crop=entropy&amp;amp;cs=tinysrgb&amp;amp;w=1080&amp;amp;fit=max&amp;amp;ixid=eyJhcHBfaWQiOjMyMDc0fQ&amp;amp;s=ee8417f0ea2a50d53a12665820b54e23 "
+                                    class="img-fluid ">
+                                <img alt="Image " src="https://images.unsplash.com/photo-1532763303805-529d595877c5?ixlib=rb-0.3.5&amp;amp;q=80&amp;amp;fm=jpg&amp;amp;crop=entropy&amp;amp;cs=tinysrgb&amp;amp;w=1080&amp;amp;fit=max&amp;amp;ixid=eyJhcHBfaWQiOjMyMDc0fQ&amp;amp;s=5ee4fd5d19b40f93eadb21871757eda6 "
+                                    class="img-fluid ">
+                                <img alt="Image " src="https://images.unsplash.com/photo-1532777946373-b6783242f211?ixlib=rb-0.3.5&amp;amp;q=80&amp;amp;fm=jpg&amp;amp;crop=entropy&amp;amp;cs=tinysrgb&amp;amp;w=1080&amp;amp;fit=max&amp;amp;ixid=eyJhcHBfaWQiOjMyMDc0fQ&amp;amp;s=8ac55cf3a68785643998730839663129 "
+                                    class="img-fluid ">
+                                <img alt="Image " src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e?ixlib=rb-0.3.5&amp;amp;q=80&amp;amp;fm=jpg&amp;amp;crop=entropy&amp;amp;cs=tinysrgb&amp;amp;w=1080&amp;amp;fit=max&amp;amp;ixid=eyJhcHBfaWQiOjMyMDc0fQ&amp;amp;s=ee8417f0ea2a50d53a12665820b54e23 "
+                                    class="img-fluid ">
+                                    <img alt="Image " src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e?ixlib=rb-0.3.5&amp;amp;q=80&amp;amp;fm=jpg&amp;amp;crop=entropy&amp;amp;cs=tinysrgb&amp;amp;w=1080&amp;amp;fit=max&amp;amp;ixid=eyJhcHBfaWQiOjMyMDc0fQ&amp;amp;s=ee8417f0ea2a50d53a12665820b54e23 "
                                     class="img-fluid ">
                                 <img alt="Image " src="https://images.unsplash.com/photo-1532763303805-529d595877c5?ixlib=rb-0.3.5&amp;amp;q=80&amp;amp;fm=jpg&amp;amp;crop=entropy&amp;amp;cs=tinysrgb&amp;amp;w=1080&amp;amp;fit=max&amp;amp;ixid=eyJhcHBfaWQiOjMyMDc0fQ&amp;amp;s=5ee4fd5d19b40f93eadb21871757eda6 "
                                     class="img-fluid ">
@@ -452,7 +468,7 @@
             </div>
         </div>
     </footer>
-    <script>
+    <script defer>
         // fetch("https://script.google.com/macros/s/AKfycby87vxKyXNJD85alUE_YiK2Q0eIie4XHhW6oXugn4cDiXYtFYvJO5dWFSaoMVUXYxo/exec ").then(res => res.text()).then(data => {
         // var vinit = data.split("\n ")
         // console.log(vinit)
@@ -467,15 +483,15 @@
         //     element1.appendChild(img);
         // }
         const root = document.documentElement;
-        const marqueeElementsDisplayed = getComputedStyle(root).getPropertyValue("--marquee-elements-displayed ");
-        const marqueeContent = document.querySelector("div.marquee-content ");
-        root.style.setProperty("--marquee-elements ", marqueeContent.children.length);
+        const marqueeElementsDisplayed = getComputedStyle(root).getPropertyValue("--marquee-elements-displayed");
+        const marqueeContent = document.querySelector("div.marquee-content");
+        root.style.setProperty("--marquee-elements", marqueeContent.children.length);
         // for (let i = 0; i < marqueeElementsDisplayed; i++) {
         //     marqueeContent.appendChild(marqueeContent.children[i].cloneNode(true));
         // }
         setTimeout(() => {
             if (marqueeContent.children.length > 5) {
-                marqueeContent.classList.add("animation-marquee ");
+                marqueeContent.classList.add("animation-marquee");
             }
         }, 2000);
     </script>
