--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!-- css -->
     <link rel="stylesheet" href="./CSS/nav.css">
     <link rel="stylesheet" href="./CSS/footer.css">
+    <link rel="stylesheet" href="./CSS/home.css">
 
     <!-- Js -->
     <script src="./js/nav.js" defer></script>
@@ -112,9 +113,27 @@
         </div>
     </div>
 
-    Hello World
+    <!-- header -->
+    <div>
+        <img src="./Img/background.png" alt="" class="backgroundImg">
+    </div>
 
     <!-- Know Us -->
+    <div class="KnowUsmDiv">
+
+        <p class="KnowUspTag">Know us</p>
+        <p id="KnowUspTag">a little better..</p>
+
+        <img src="./Img/image 7.png" alt="" class="womenWithALaptop">
+        <p id="womenBelowText">Aenean ut nulla duis lacus, vitae. Nibh nisl ipsum id sem eget nulla nulla. In ac, ac at tempor vel. Sed at sed vel fringilla ligula pharetra, et nisl. Mauris hac non adipiscing molestie.Nunc, consequat et et lorem. Pulvinar aliquam, hac imperdiet
+            dignissim ut congue diam habitasse. Consectetur urna cursus tellus nulla pretium convallis. </p>
+
+        <div class="WhyHowWhatDiv">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+    </div>
 
     <!-- footer -->
     <!-- footer destop-->
