--- a/index.html
+++ b/index.html
@@ -127,11 +127,25 @@
         <img src="./Img/image 7.png" alt="" class="womenWithALaptop">
         <p id="womenBelowText">Aenean ut nulla duis lacus, vitae. Nibh nisl ipsum id sem eget nulla nulla. In ac, ac at tempor vel. Sed at sed vel fringilla ligula pharetra, et nisl. Mauris hac non adipiscing molestie.Nunc, consequat et et lorem. Pulvinar aliquam, hac imperdiet
             dignissim ut congue diam habitasse. Consectetur urna cursus tellus nulla pretium convallis. </p>
+    </div>
 
-        <div class="WhyHowWhatDiv">
-            <div></div>
-            <div></div>
-            <div></div>
+    <div class="WhyHowWhatDiv">
+        <div class="whyDiv">
+            <img src="./Img/why.png" alt="" class="why">
+            <p class="questionpTag">The <span>Why?</span></p>
+            <p class="CardDesPTag">We seek to <span>foster entrepreneurship</span> through creative, one-of-a-kind, authentic, and efficient techniques.</p>
+        </div>
+        <div class="HowDiv">
+            <img src="./Img/how.png" alt="" class="how">
+            <p class="questionpTag">The <span>How?</span></p>
+            <p class="CardDesPTag">We are able to do all of this because of
+                <span>strong collaboration and hospitality among members of society</span>, which our organization instills in the participants.</p>
+        </div>
+        <div class="WhatDiv">
+            <img src="./Img/what.png" alt="" class="what">
+            <p class="questionpTag">The <span>What?</span></p>
+            <p class="CardDesPTag"> Through our social media handles, we <span>arrange informative podcasts, high-quality events, and inspiring and thought-provoking material.</span>
+            </p>
         </div>
     </div>
 
