--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
             dignissim ut congue diam habitasse. Consectetur urna cursus tellus nulla pretium convallis. </p>
     </div>
 
+    <!-- Why_What_How -->
     <div class="WhyHowWhatDiv">
         <div class="whyDiv">
             <img src="./Img/why.png" alt="" class="why">
@@ -148,6 +149,9 @@
             </p>
         </div>
     </div>
+
+    <!-- Believe -->
+    <p class="BelievePTag">What we <span>believe</span> in...🤔</p>
 
     <!-- footer -->
     <!-- footer destop-->
