--- a/index.html
+++ b/index.html
@@ -153,6 +153,12 @@
     <!-- Believe -->
     <p class="BelievePTag">What we <span>believe</span> in...🤔</p>
 
+    <div class="believeCenterDiv">
+        <div class="believeCenterCol">
+            <p>Providing a <span>forum for young entrepreneurs</span> and assisting them in launching their businesses.</p>
+        </div>
+    </div>
+
     <!-- footer -->
     <!-- footer destop-->
     <footer class="desFooter">
