--- a/index.html
+++ b/index.html
@@ -157,6 +157,18 @@
         <div class="believeCenterCol">
             <p>Providing a <span>forum for young entrepreneurs</span> and assisting them in launching their businesses.</p>
         </div>
+        <div class="believeCenterCol">
+            <p>Providing useful information that indicates an organization's ability to <span>function as a cohesive one.</span></p>
+        </div>
+        <div class="believeCenterCol">
+            <p>Organizing entrepreneurial activities to <span>boost the confidence</span> of aspiring entrepreneurs.</p>
+        </div>
+        <div class="believeCenterCol">
+            <p>Implementing an <span>industry-focused mindset</span> with a distinct perspective on things.</p>
+        </div>
+        <div class="believeCenterCol">
+            <p>Aiming in <span>providing a hospitable and welcoming environment</span> among team members, collaborators, and participants.</p>
+        </div>
     </div>
 
     <!-- footer -->
