--- a/index.html
+++ b/index.html
@@ -171,6 +171,18 @@
         </div>
     </div>
 
+    <p class="BelievePTag">What do <span>they say</span> about us?</p>
+
+    <div class="testDivMain">
+        <div class="testDivChild">
+            <div class="testDiv">
+                <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit. Gravida consectetur nec eros, in. Sed velit enim, egestas interdum sit et. Mi commodo mi nec adipiscing lobortis dui elementum quisque. Placerat tincidunt commodo mauris aliquet
+                    vulputate amet, id tortor, faucibus.”</p>
+            </div>
+            <div></div>
+        </div>
+    </div>
+
     <!-- footer -->
     <!-- footer destop-->
     <footer class="desFooter">
