--- a/index.html
+++ b/index.html
@@ -176,10 +176,31 @@
     <div class="testDivMain">
         <div class="testDivChild">
             <div class="testDiv">
-                <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit. Gravida consectetur nec eros, in. Sed velit enim, egestas interdum sit et. Mi commodo mi nec adipiscing lobortis dui elementum quisque. Placerat tincidunt commodo mauris aliquet
+                <p class="testpTag">“Lorem ipsum dolor sit amet, consectetur adipiscing elit. Gravida consectetur nec eros, in. Sed velit enim, egestas interdum sit et. Mi commodo mi nec adipiscing lobortis dui elementum quisque. Placerat tincidunt commodo mauris aliquet
                     vulputate amet, id tortor, faucibus.”</p>
+
+                <div class="userDiv">
+                    <img src="./Img/user.png" alt="user" class="UserIcon">
+                    <div class="userDisDiv">
+                        <p class="userName">Lyla Rosen</p>
+                        <p class="userPost">Lyla Rosen</p>
+                    </div>
+                </div>
+            </div>
+            <div class="testDiv">
+                <p class="testpTag">“Lorem ipsum dolor sit amet, consectetur adipiscing elit. Gravida consectetur nec eros, in. Sed velit enim, egestas interdum sit et. Mi commodo mi nec adipiscing lobortis dui elementum quisque. Placerat tincidunt commodo mauris aliquet
+                    vulputate amet, id tortor, faucibus.”</p>
+
+                <div class="userDiv">
+                    <img src="./Img/user.png" alt="user" class="UserIcon">
+                    <div class="userDisDiv">
+                        <p class="userName">Lyla Rosen</p>
+                        <p class="userPost">Lyla Rosen</p>
+                    </div>
+                </div>
             </div>
         </div>
+        <p class="Seeall">See all</p>
     </div>
 
     <!-- footer -->
