--- a/index.html
+++ b/index.html
@@ -200,8 +200,9 @@
                 </div>
             </div>
         </div>
-        <p class="Seeall">See all</p>
     </div>
+    <p class="Seeall"><span id="Seeall">See all</span> <span>></span></p>
+
 
     <!-- footer -->
     <!-- footer destop-->
@@ -319,6 +320,7 @@
             </div>
         </div>
     </footer>
+
 
 </body>
 
