--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
         </div>
     </div>
 
+    <!-- testimonial -->
     <p class="BelievePTag">What do <span>they say</span> about us?</p>
 
     <div class="testDivMain">
@@ -202,6 +203,11 @@
         </div>
     </div>
     <p class="Seeall"><span id="Seeall">See all</span> <span>></span></p>
+
+    <!-- we work with -->
+    <div class="WeWorkWith">
+        <p>We <span>work</span> with...</p>
+    </div>
 
     <!-- footer -->
     <!-- footer destop-->
