--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="./CSS/footer.css">
     <link rel="stylesheet" href="./CSS/home.css">
 
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
+
     <!-- Js -->
     <script src="./js/nav.js" defer></script>
 
@@ -210,9 +213,17 @@
     <div class="WeWorkWith">
         <p class="WeWorkWithPTag">We <span>work</span> with...</p>
 
-        <marquee behavior="" direction="">
-            hello
-        </marquee>
+        <div class="corousal">
+            <div class="cardMain">
+                <img src="https://images.unsplash.com/photo-1532777946373-b6783242f211?ixlib=rb-0.3.5&amp;q=80&amp;fm=jpg&amp;crop=entropy&amp;cs=tinysrgb&amp;w=1080&amp;fit=max&amp;ixid=eyJhcHBfaWQiOjMyMDc0fQ&amp;s=8ac55cf3a68785643998730839663129" alt="" class="cardImgTag">
+            </div>
+        </div>
+
+        <div class="pTagDivWork">
+            <p class="workptagDes">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Semper vel suspendisse pharetra, ultrices. Tortor risus hac varius ipsum. Feugiat nunc feugiat amet ac sit elit pretium. Duis praesent volutpat quis euismod cras maecenas viverra arcu.
+            </p>
+        </div>
 
     </div>
 
@@ -333,6 +344,8 @@
         </div>
     </footer>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
 </body>
 
 </html>
