--- a/index.html
+++ b/index.html
@@ -226,6 +226,29 @@
         </div>
     </div>
 
+    <!-- business -->
+    <div class="businessMDiv">
+        <div class="businessMDivleft">
+            <p class="LetsTalkBusiness">Let’s Talk <span>Business</span></p>
+            <p class="LetsTalkBusinessSubtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris, faucibus id dignissim massa sed augue ut magna aliquet.</p>
+        </div>
+        <div class="businessMDivright">
+            <div>
+                <label for="name">Name:</label>
+                <input type="text" name="name" id="">
+            </div>
+            <div>
+                <label for="email">Email:</label>
+                <input type="text" name="email" id="">
+            </div>
+            <div>
+                <label for="Message">Message:</label>
+                <textarea name="Message" id="" cols="30" rows="10"></textarea>
+            </div>
+            <button>Send</button>
+        </div>
+    </div>
+
     <!-- footer -->
     <!-- footer destop-->
     <footer class="desFooter">
